packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-explicit/+page.server.js
import { error } from '@tg-svelte/kit';

/** @type {import('./$types').Actions} */
export const actions = {
	default: () => {
		error(400, 'oops');
	}
};
